tests/spec/emit/snapshots/if_else_branch_with_statements_before_result_return.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn checked_sqrt(n: int) -> Result<int, string> {
    if n < 0 {
      Err("negative input")
    } else {
      let mut x = n;
      while x * x > n {
        x = x - 1;
      }
      Ok(x)
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func checkedSqrt(n int) lisette.Result[int, string] {
	if n < 0 {
		return lisette.MakeResultErr[int, string]("negative input")
	}
	x := n
	for x*x > n {
		x--
	}
	return lisette.MakeResultOk[int, string](x)
}
