tests/spec/emit/snapshots/if_expr_same_name_as_let_binding.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nfn test() -> int {\n  let val = if true {\n    let val = 100;\n    val + 1\n  } else {\n    0\n  }\n  val\n}\n"
---
package main

func test() int {
	var val_1 int
	if true {
		val := 100
		val_1 = val + 1
	} else {
		val_1 = 0
	}
	return val_1
}
