tests/spec/emit/snapshots/if_expression_in_let.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nfn test(x: int) -> int {\n  let result = if x > 0 { x * 2 } else { 0 };\n  result\n}\n"
---
package main

func test(x int) int {
	var result int
	if x > 0 {
		result = x * 2
	} else {
		result = 0
	}
	return result
}
