tests/spec/emit/snapshots/if_generic_struct_literal_in_condition.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Box<T> { v: T }
  
  fn test() -> int {
    let b = Box { v: 1 }
    if b == Box { v: 2 } {
      1
    } else {
      0
    }
  }
---
package main

type Box[T any] struct {
	v T
}

func test() int {
	b := Box[int]{v: 1}
	if b == (Box[int]{v: 2}) {
		return 1
	}
	return 0
}
