tests/spec/emit/snapshots/if_generic_tuple_struct_comparison.snap
---
source: tests/spec/emit/control_flow.rs
description: "input: \nstruct W<T>(T)\n\nfn test() -> int {\n  let w = W(1)\n  if w == W(2) { 0 } else { 1 }\n}\n"
---
package main

type W[T any] struct {
	F0 T
}

func test() int {
	w := W[int]{F0: 1}
	if w == (W[int]{F0: 2}) {
		return 0
	}
	return 1
}
