tests/spec/emit/snapshots/if_let_else_if_let.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(a: Option<int>, b: Option<int>) -> int {
    if let Some(x) = a {
      x
    } else if let Some(y) = b {
      y
    } else {
      0
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(a, b lisette.Option[int]) int {
	if a.Tag == lisette.OptionSome {
		return a.SomeVal
	}
	if b.Tag == lisette.OptionSome {
		return b.SomeVal
	}
	return 0
}
