tests/spec/emit/snapshots/if_let_irrefutable_ident_subject_unused.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct P { v: int }
  fn test() {
    let p = P { v: 1 }
    if let P { v } = p {
      ()
    }
  }
---
package main

type P struct {
	v int
}

func test() {
	p := P{v: 1}
	_ = p
}
